knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_Influence_And_Support_Matrix__c/pqcrush__pq_Influence_And_Support_Matrix__c.object-meta.xml
<CustomObject>
    <label>Influence And Support Matrix</label>
    <nameField>
        <label>Influence And Support Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Influence And Support Matrixes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>