knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_Influence_And_Support_Matrix__c/fields/pqcrush__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>There should only be one matrix marked as the global default.  If multiple matrices are set as default, the system will select whichever was most recently modified.</description>
    <inlineHelpText>There should only be one matrix marked as the global default.  If multiple matrices are set as default, the system will select whichever was most recently modified.</inlineHelpText>
    <label>Global Default</label>
    <type>Checkbox</type>
</CustomField>