knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_Influence_And_Support_Matrix__c/fields/pqcrush__Support_Label__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Support_Label__c</fullName>
    <label>Support Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>